@@ -12,10 +12,18 @@ import java.net.URL;
 
 import static java.lang.System.*;
 import java.util.*;
+import java.util.Queue;
+
 import javax.imageio.ImageIO;
 import javax.swing.*;
+import src.Bird;
+import src.Bonus;
+import src.Feeder;
+import src.GameLogic;
+import src.Player;
+import src.ProgramState;
 public class FramePanel extends JPanel implements MouseListener, MouseMotionListener, KeyListener {
-    private BufferedImage cover, infoButton, bg, exitPic, leftArrow, rightArrow, birdBack, wheatToken, invertebrateToken, fishToken, fruitToken, rodentToken, Continue_Button, feederPic, Action_Button, Score_By_Round, Reroll_Button, skip, Clear_Button;
+    private BufferedImage Reroll_Button,cover, infoButton, bg, exitPic, leftArrow, rightArrow, birdBack, wheatToken, invertebrateToken, fishToken, fruitToken, rodentToken, Continue_Button, feederPic, Action_Button, Score_By_Round, Clear_Button, skip;
     private BufferedImage[] dicePics = new BufferedImage[6];
     private BufferedImage[] rulePics = new BufferedImage[12];
     private final ProgramState state;
@@ -45,6 +53,11 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
     Bird[] startOptions;
     Bonus[] bonusOptions;
 
+    private Queue<Bird> pinkPowerQueue = new LinkedList<>();
+    private Queue<Integer> pinkPowerOwnerQueue = new LinkedList<>();
+    private Bird currentPinkBird;
+    private int currentPinkOwner;
+    
     //Game run variables
     
 
@@ -52,7 +65,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
         
         this.state = state;
         addMouseListener(this);
-        addKeyListener(this);
         addMouseMotionListener(this);
         feeder = new Feeder(state);
         
@@ -121,9 +133,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
     boolean selectingFood;
     int[] yesCrds = {510, 790, 385, 515};
     int[] noCrds = {810, 1090, 385, 515};
-    String nestType;
-    int runCount = 0;
-    int playingHolder;
     int currentBirdNum;
     //int habitatActCount;
     String runningHabitat;
@@ -294,10 +303,8 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 else if (x>=190 && x<=235 && y>=440 && y<=484) state.CURRENTEVENT.add("View Bonus");
                 else if (x>=37 && x<=83 && y>=683 && y<=726) state.CURRENTEVENT.add("View Feeder");
                 else if (x>=508 && x<=589 && y>=22 && y<=86) state.CURRENTEVENT.add("Info");
-                else if (x>=480 && x<=530 && y>=120 && y<=170) {state.CURRENTEVENT.add("Play Bird");
-                    state.specificBirdToPlay=null;
-                    state.birdFoodsForPlayingBird=new int[5];
-                }
+                else if (x>=1375 && x<=1425 && y>=615 && y<=665) state.CURRENTEVENT.add("View Draw Birds");
+                else if (x>=480 && x<=530 && y>=120 && y<=170) state.CURRENTEVENT.add("Play Bird");
                 else if (x>=440 && x<=463 && y>=214 && y<=238){
                     if (state.players[state.playing].getBirdsInHabitat("forest").size()!=0)
                         state.CURRENTEVENT.add("On Activate Ability");
@@ -513,7 +520,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     for (int i=0;i<5;i++){
                         if (x>=diceLocMap[i][0] && x<=diceLocMap[i][0]+90 && y>=diceLocMap[i][1] && y<=diceLocMap[i][1]+90){
                             if (feeder.getDice().get(i).equals("a")) selectingBool = true;
-                            else {state.players[state.playing].addFood(feeder.getDice().get(i), 1);state.CURRENTEVENT.removeLast();}
+                            else {state.players[state.playing].addFood(feeder.getDice().get(i), 1);state.CURRENTEVENT.removeLast();checkPinkPowers("Gain Food", feeder.getDice().get(i));}
                             feeder.getOutDice().add(feeder.getDice().remove(i));
                         }
                     }
@@ -538,11 +545,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 //out.println("Removing eggz");
                 repaint();
             }case "Lay Eggs" ->{
-                if(!state.players[state.playing].canLayEggs()) {
-                    state.CURRENTEVENT.removeLast();
-                    repaint();
-                    return;
-                }
                 Bird[][] birdBoard = state.players[state.playing].getPlayerBoard();
                 for (int i=0;i<3;i++){
                     for (int j=0;j<5;j++){
@@ -551,6 +553,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                                 if (birdBoard[i][j].getEggCount()<birdBoard[i][j].getMaxEggs()){
                                     birdBoard[i][j].addEggs(1);
                                     state.CURRENTEVENT.removeLast();
+                                    checkPinkPowers("Lay Eggs");
                                 }
                             }
                         }
@@ -614,11 +617,6 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                 // g2.drawRect(1152, 155, 1302-1152, 392-155);
                 // g2.drawRect(1152, 403, 1302-1152, 637-403);
                 // g2.drawRect(1152,650,1302-1152,866-650);
-                if(state.players[state.playing].getCardsInHand().isEmpty()){
-                    state.CURRENTEVENT.removeLast();
-                    repaint();
-                    return;
-                }
                 if(x>=470 && x<=628 && y>=155 && y<=392){ state.squaresClickedToPlayBird[0][0] = !state.squaresClickedToPlayBird[0][0]; state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="forest";} 
                 if(x>=469 && x<=627 && y>=403 && y<=637) {state.squaresClickedToPlayBird[1][0] = !state.squaresClickedToPlayBird[1][0]; state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="plains";}
                 if(x>=470 && x<=626 && y>=650 && y<=866){ state.squaresClickedToPlayBird[2][0] = !state.squaresClickedToPlayBird[2][0];state.CURRENTEVENT.removeLast();state.CURRENTEVENT.add("Play Specific Bird");state.habitatToPlayBird="wetlands";} 
@@ -665,32 +663,25 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         }
                     }
                 }
-                out.println(state.players[state.playing].getCardsInHand().get(currentShowing*4+0));
-                if(x>=253 && x<=489 && y>=504 && y<=825&&state.players[state.playing].getCardsInHand().get(currentShowing*4+0).canLiveInHabitat(state.habitatToPlayBird)) {
-                    // out.println("Clicked first card to play");
-                    // if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+0),state.habitatToPlayBird,position ))
-                    //     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+0);
-                    // for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
-                    // state.CURRENTEVENT.removeLast();
-                    state.specificBirdToPlay=state.players[state.playing].getCardsInHand().get(currentShowing*4+0);
+                if(x>=253 && x<=489 && y>=504 && y<=825){
+                    out.println("Clicked first card to play");
+                    if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+0),state.habitatToPlayBird,position ))
+                        state.players[state.playing].getCardsInHand().remove(currentShowing*showing+0);
+                    for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
                     state.CURRENTEVENT.removeLast();
-                    state.CURRENTEVENT.add("Pick Food For Specific Bird");
-                } else if ( x >= 504 && x <= 740 && y >= 504 && y <= 825&&state.players[state.playing].getCardsInHand().get(currentShowing*4+1).canLiveInHabitat(state.habitatToPlayBird) ) {
+                    state.CURRENTEVENT.removeLast();
+                } else if ( x >= 504 && x <= 740 && y >= 504 && y <= 825 ) {
                     out.println("Clicked Second card to play");
-                //    if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+1),state.habitatToPlayBird, position))
-                //         state.players[state.playing].getCardsInHand().remove(currentShowing*showing+1);
-                //     for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
-                //     state.CURRENTEVENT.removeLast();
-                    state.specificBirdToPlay=state.players[state.playing].getCardsInHand().get(currentShowing*4+1);
+                   if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+1),state.habitatToPlayBird, position))
+                        state.players[state.playing].getCardsInHand().remove(currentShowing*showing+1);
+                    for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
                     state.CURRENTEVENT.removeLast();
-                    state.CURRENTEVENT.add("Pick Food For Specific Bird");
-                } else if ( x >= 755 && x <= 991 && y >= 504 && y <= 825&&state.players[state.playing].getCardsInHand().get(currentShowing*4+2).canLiveInHabitat(state.habitatToPlayBird) ) {
+                    state.CURRENTEVENT.removeLast();
+                } else if ( x >= 755 && x <= 991 && y >= 504 && y <= 825 ) {
                     out.println("Clicked Third card to play");
-                    // if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+2),state.habitatToPlayBird, position))
-                    //     state.players[state.playing].getCardsInHand().remove(currentShowing*showing+2);
-                    // for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
-                    // state.CURRENTEVENT.removeLast();
-                    state.specificBirdToPlay=state.players[state.playing].getCardsInHand().get(currentShowing*4+2);
+                    if(state.players[state.playing].playBird(state.players[state.playing].getCardsInHand().get(currentShowing*4+2),state.habitatToPlayBird, position))
+                        state.players[state.playing].getCardsInHand().remove(currentShowing*showing+2);
+                    for (int i=0;i<3;i++) for (int j=0;j<5;j++) state.squaresClickedToPlayBird[i][j] = false;
                     state.CURRENTEVENT.removeLast();
                     state.CURRENTEVENT.add("Pick Food For Specific Bird");
                 } else if ( x >= 1000 && x <= 1237 && y >= 504 && y <= 825&&state.players[state.playing].getCardsInHand().get(currentShowing*4+3).canLiveInHabitat(state.habitatToPlayBird) ) {
@@ -717,7 +708,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                     out.println("activated when placed");
                     String abilityText = currentBird.getAbilityText();
                     Player p = state.players[state.playing];
-                    if (abilityText.contains("a second bird")) {
+                    if (abilityText.contains("Play a second bird")) {
                         /*OFFER A CHOICE */
                         state.CURRENTEVENT.removeLast();
                         state.CURRENTEVENT.add("Play Bird");
@@ -748,11 +739,7 @@ public class FramePanel extends JPanel implements MouseListener, MouseMotionList
                         state.CURRENTEVENT.add("Draw Birds");
                         state.CURRENTEVENT.add("Draw Birds");
                     } else if (abilityText.contains("Lay 1 [egg] on each of your birds ")) {
-                        String nestType = "";
-                        if (abilityText.contains("cavity")) nestType = "cavity";
-                        else if (abilityText.contains("ground")) nestType = "ground";
-                        else if (abilityText.contains("platform")) nestType = "platform";
-                        else if (abilityText.contains("bowl")) nestType = "bowl";
+                        String nestType = abilityText.substring(abilityText.indexOf("[")+1, abilityText.indexOf("]"));
                         p.layEggsInNestType(nestType);
                         state.CURRENTEVENT.removeLast();
                     }
@@ -794,21 +781,12 @@ repaint();
                 String ability = currentBird.getAbilityText();
                 out.println("Current Bird NUm: " + currentBirdNum);
                 if (currentBirdNum>-1){
-                    currentBird = state.players[state.playing-1].getBirdsInHabitat(runningHabitat).get(currentBirdNum);
-                    ability = currentBird.getAbilityText();
-                }else {
-                    currentBird = null;
-                    state.CURRENTEVENT.removeLast();
-                }
-                
-                
+                    currentBird = state.players[state.playing].getBirdsInHabitat(runningHabitat).get(currentBirdNum);
+                }else {currentBird = null;state.CURRENTEVENT.removeLast();}
                 out.println("ON ACTIVATE");
                 out.println("Ability: "+ability);
                 if (currentBird!=null && currentBird.getAbility().getTrigger().equals("OA")){
-                    if (x>=1260 && y>=16 && x<=1480 && y<=121){
-                        currentBirdNum--;
-                    }
-                    else if (ability.contains("Gain 1 [seed] from the birdfeeder")){
+                    if (ability.contains("Gain 1 [seed] from the birdfeeder")){
                         if (feeder.getDice().contains("s")){
                             if (selectingBool){
                                 if (x>=yesCrds[0] && x<=yesCrds[1] && y>=yesCrds[2] && y<=yesCrds[3]) {
@@ -829,6 +807,7 @@ repaint();
                             }
                         }
                     }
+                    else if (ability.contains("fewest birds in their")){currentBirdNum--;}
                     else if (ability.contains("Tuck 1 [card]")){
                         if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing-1].getCardsInHand().size()/showing)
                         currentShowing++;
@@ -841,7 +820,7 @@ repaint();
                                     currentBird.tuckCard();
                                     currentBirdNum--;
                                     if (ability.contains("draw 1 [card]"))
-                                        state.CURRENTEVENT.add("Draw Birds");
+                                        state.CURRENTEVENT.add("Draw Card");
                                     else if (ability.contains("lay 1 [egg]"))
                                         currentBird.addEggs(1);
                                     else if (ability.contains("gain 1 [fruit]"))
@@ -876,27 +855,12 @@ repaint();
                             check = "f";
                         if (feeder.getOutDice().contains(check)){
                             currentBird.cacheFood();
+                            checkPinkPowers("Predator Success");
                         }
                         currentBirdNum--;
                         state.CURRENTEVENT.add("View Feeder");
                     }
-                    else if (ability.contains("Each player gains 1 [die]")){
-                        if (x>=1300 && y>=400 && x<=1400 && y<= 500) {
-                            state.CURRENTEVENT.add("View Feeder");
-                        }else if (y>=550 && y<=630){
-                            for (int i=0;i<4;i++){
-                                if (x>=250 + 110*i && x<=350 + 110*i){
-                                    playingHolder = state.playing;
-                                    state.playing = i;
-                                    //add the event lol
-                                    state.CURRENTEVENT.add("Loop Gain Food");
-                                    currentBirdNum--;
-                                }
-
-                            }
-                        }
-                        
-                    }
+                    else if (ability.contains("Each player gains 1 [die]")){currentBirdNum--;}
                     else if (ability.contains("Lay 1 [egg] on any bird")){
                         currentBirdNum--;
                         state.CURRENTEVENT.add("Lay Eggs");
@@ -923,21 +887,7 @@ repaint();
                         state.CURRENTEVENT.add("View Highlight Bird");
                     }
                     else if (ability.contains("If this bird is to the right")){
-                        if (state.players[state.playing-1].getBirdsInHabitat(runningHabitat).getLast().equals(currentBird)){
-                            if (x>=247 && x<=466 && y>=154 && y<=394){
-                                out.println("Fly to forest");
-                                state.players[state.playing-1].getBoard().moveBird(currentBird, "forest");
-                                currentBirdNum--;
-                            }else if (x>=246 && x<=467 && y>=398 && y<=646){
-                                out.println("Fly to grasslands");
-                                state.players[state.playing-1].getBoard().moveBird(currentBird, "grasslands");    
-                                currentBirdNum--;
-                            }else if (x>=245 && x<=463 && y>=649 && y<=860){
-                                out.println("Fly to grasslands");
-                                state.players[state.playing-1].getBoard().moveBird(currentBird, "wetlands");
-                                currentBirdNum--;
-                            }
-                        }else currentBirdNum--;
+                        currentBirdNum--;
                     }
                     else if (ability.contains("If you do, discard")){
                         state.CURRENTEVENT.add(state.CURRENTEVENT.indexOf("Game")+1, "Remove Bird");
@@ -968,6 +918,7 @@ repaint();
                         state.CURRENTEVENT.add("Draw Birds");
                         state.CURRENTEVENT.add("Remove Egg");
                     }
+                    else if (ability.contains("Repeat a brown power")){currentBirdNum--;}
                     else if (ability.contains("Trade 1 [wild] for any")){
                         if (state.players[state.playing-1].hasFood()){
                             state.CURRENTEVENT.add("Remove Food");
@@ -978,54 +929,15 @@ repaint();
                             currentBirdNum--;
                         }
                     }
-                    else if (ability.contains("Repeat 1 [predator] power")){
-                        int j = 0;
-                        ArrayList<Bird> birdArr = state.players[state.playing-1].getBirdsInHabitat(runningHabitat);
-                        if (runningHabitat.equals("grasslands")) j++;
-                        if (runningHabitat.equals("wetlands")) j+=2;
-                        for (int i=0;i<5;i++){
-                            if (x>=470+170*i && x<=644+170*i && y>=155+247*i && y<= 375+247*i){
-                                String a = birdArr.get(i).getAbilityText();
-                                if (a.contains("Roll all dice not in birdfeeder")){
-                                    feeder.rollOutDice();
-                                    String check="";
-                                    if (a.contains("[rodent]"))
-                                        check = "r";
-                                    else if (a.contains("[fish]"))
-                                        check = "f";
-                                    if (feeder.getOutDice().contains(check)){
-                                        currentBird.cacheFood();
-                                    }
-                                    currentBirdNum--;
-                                    state.CURRENTEVENT.add("View Feeder");
-                                }else if (a.contains("Look at a [card] from the deck")){
-                                    int span = 0;
-                                    if (a.contains("50")) span = 50;
-                                    else if (a.contains("75")) span = 75;
-                                    else span = 100;
-
-                                    highlighted = birds.remove(0);
-                                    if (highlighted.getWingspan()<span) currentBird.tuckCard();
-                                    currentBirdNum--;
-                                    state.CURRENTEVENT.add("View Highlight Bird");
-                                }
-                            }
-                            currentBirdNum--;
-                        }
-                    }
-                    else if (ability.contains("All players lay 1 [egg] on any 1")){
-                        playingHolder = state.playing-1;
-                        state.CURRENTEVENT.add("Loop Lay Eggs");
-                        currentBirdNum--;
-                    }
+                    else if (ability.contains("Repeat 1 [predator] power")){currentBirdNum--;}
+                    else if (ability.contains("All players lay 1 [egg] on any 1")){currentBirdNum--;}
                     else if (currentBird.getName().equals("Mallard")){
-                        currentBirdNum--;
-                        state.CURRENTEVENT.add("Draw Birds");
+                        state.CURRENTEVENT.removeLast();currentBirdNum--;state.CURRENTEVENT.add("Draw Birds");
                     }
                     else if (ability.contains("All players draw 1 [card]")){
                         for (int i=0;i<4;i++){
-                            state.players[state.playing-1].addCardToHand(birds.removeFirst());
-                            
+                            state.players[state.playing].addCardToHand(birds.remove(0));
+                            state.playing = (state.playing+1)%4;
                         }
                         currentBirdNum--;
                     }
@@ -1099,9 +1011,8 @@ repaint();
                     }
                 }
                 repaint();
-            }
-            case "Remove Bird" -> {
-                if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing-1].getCardsInHand().size()/showing)
+            }case "Remove Bird" -> {
+                if (x>=1400 && y>=590 && x<=1460 && y<=650 && currentShowing != state.players[state.playing].getCardsInHand().size()/showing)
                     currentShowing++;
                 else if (x>=50 && x<=110 && y>=590 && y<=650 && currentShowing != 0) currentShowing--;
 
@@ -1125,14 +1036,81 @@ repaint();
                     }
                 }
                 repaint();
-            }case "Add Food" -> {
-                String[] fo = {"s", "f", "b", "i", "r"};
-                for (int i=0;i<5;i++){
-                    if (x>=250+100*i && x<=350+100*i && y>=550 && y<=650){
-                        state.players[state.playing-1].addFood(fo[i], 1);
-                        state.CURRENTEVENT.removeLast();
+                }case "Add Food" -> {
+                    String[] fo = {"s", "f", "b", "i", "r"};
+                    for (int i=0;i<5;i++){
+                        if (x>=250+100*i && x<=350+100*i && y>=550 && y<=650){
+                            state.players[state.playing].addFood(fo[i], 1);
+                            state.CURRENTEVENT.removeLast();
+                            checkPinkPowers("Gain Food", fo[i]);
                     }
+                    }
+                    repaint();
+                }case "Once Between Turns Ability" -> {
+                if (pinkPowerQueue.isEmpty()) {
+                    state.CURRENTEVENT.removeLast();
+                    repaint();
+                    return;
                 }
+                
+                if (currentPinkBird == null) {
+                    currentPinkBird = pinkPowerQueue.peek();
+                    currentPinkOwner = pinkPowerOwnerQueue.peek();
+                }
+                
+                Player owner = state.players[currentPinkOwner];
+                String abilityText = currentPinkBird.getAbilityText();
+                
+                if (x>=1100 && x<=1400 && y>=300 && y<=400) {
+                    finishPinkPower();
+                    repaint();
+                    return;
+                }
+                
+                if (abilityText.contains("lay 1 [egg]")) {
+                     // autolay on first valid bird
+                     boolean laid = owner.layEggsOnAnyBird();
+                     if (!laid) {
+                         // manual force lay field
+                     }
+                     finishPinkPower();
+                } else if (abilityText.contains("gain 1 [fish]") || abilityText.contains("gain 1 [invertebrate]") || abilityText.contains("gain 1 [die]")) {
+                    if (abilityText.contains("from the supply")) {
+                        String food = "";
+                        if (abilityText.contains("[fish]")) food = "f";
+                        else if (abilityText.contains("[invertebrate]")) food = "i";
+                        
+                        if (!food.isEmpty()) {
+                            owner.addFood(food, 1);
+                            finishPinkPower();
+                        }
+                    } else if (abilityText.contains("from the birdfeeder")) {
+                         for (int i=0;i<5;i++){
+                            if (i < feeder.getDice().size() && x>=diceLocMap[i][0] && x<=diceLocMap[i][0]+90 && y>=diceLocMap[i][1] && y<=diceLocMap[i][1]+90){
+                                String die = feeder.getDice().get(i);
+                                owner.addFood(die, 1);
+                                feeder.getOutDice().add(feeder.getDice().remove(i));
+                                finishPinkPower();
+                                break;
+                            }
+                        }
+                    }
+                } else if (abilityText.contains("tuck 1 [card]")) {
+                    // auto set to first card within hand
+                    if (!owner.getCardsInHand().isEmpty()) {
+                        Bird card = owner.getCardsInHand().remove(0);
+                        currentPinkBird.tuckCard();
+                        finishPinkPower();
+                    } else {
+                        finishPinkPower();
+                    }
+                } else if (abilityText.contains("cache 1 [rodent]")) {
+                    currentPinkBird.cacheFood();
+                    finishPinkPower();
+                } else {
+                    finishPinkPower();
+                }
+                
                 repaint();
             }
             default ->{
@@ -1485,25 +1463,16 @@ repaint();
                 case "Play Bird" -> paintPlayBird(g);
                 case "Play Specific Bird" -> paintPlaySpecificBird(g);
                 case "Rules" -> paintRules(g);
-                case "Wait For Second Part Play Specific Bird" -> paintPlaySpecificBirdSecondPart(g);
+                case "Choose Bird" -> paintPlaySpecificBirdSecondPart(g);
                 case "When Played Ability" -> paintWPAbility(g);
                 case "Choose Bonus" -> paintBonusDraw(g);
                 case "Loop Draw" -> paintLoopDraw(g);
                 case "On Activate Ability" -> paintOAAbility(g);
-                case "Remove Bird" -> {
-                    paintViewBirds(g);
-                    g.setFont(new Font("Arial", Font.BOLD, 55));
-                    g.drawString("Remove", 400, 456);
-                }
+                case "Remove Bird" -> paintViewBirds(g);
                 case "Tuck Card" -> paintViewBirds(g);
+                case "Once Between Turns Ability" -> paintOBTAbility(g);
                 case "Remove Food" -> paintViewFoods(g);
                 case "Add Food" -> paintViewFoods(g);
-                case "Loop Gain Food" -> {
-                    paintViewFeeder(g);
-                    g.setFont(new Font("Arial", Font.BOLD, 55));
-                    g.drawString("PLayer " + (state.playing+1) + " pick a food", 300, 200);
-                    if (selectingBool) paintBoolean(g, "Select Food", "Seed","Insect");
-                }
                 case "No Food" -> {
                     paintGame(g);
                     g.setColor(Color.CYAN);
@@ -1526,29 +1495,29 @@ repaint();
                 }
                 case "Lay Eggs" -> {
                     paintGame(g);Graphics2D g2 = (Graphics2D)g;
-                    g2.setStroke(new BasicStroke(5.0f));
-                    g2.setColor(Color.BLUE);
+        g2.setStroke(new BasicStroke(5.0f));
+        g2.setColor(Color.BLUE);
 
-                    if(state.players[state.playing].getBoard().getBoard()[0][0]!=null)g2.drawRect(470, 155, 628-470, 392-155);
-                    if(state.players[state.playing].getBoard().getBoard()[1][0]!=null)g2.drawRect(469, 403, 627-469, 637-403);
-                    if(state.players[state.playing].getBoard().getBoard()[2][0]!=null)g2.drawRect(470,650,626-470,866-650);
+        if(state.players[state.playing].getBoard().getBoard()[0][0]!=null)g2.drawRect(470, 155, 628-470, 392-155);
+        if(state.players[state.playing].getBoard().getBoard()[1][0]!=null)g2.drawRect(469, 403, 627-469, 637-403);
+        if(state.players[state.playing].getBoard().getBoard()[2][0]!=null)g2.drawRect(470,650,626-470,866-650);
 
-                    if(state.players[state.playing].getBoard().getBoard()[0][1]!=null)g2.drawRect(644, 155, 800-644, 392-155);
-                    if(state.players[state.playing].getBoard().getBoard()[1][1]!=null)g2.drawRect(644, 403, 800-644, 637-403);
-                    if(state.players[state.playing].getBoard().getBoard()[2][1]!=null)g2.drawRect(644,650,800-644,866-650);
+       if(state.players[state.playing].getBoard().getBoard()[0][1]!=null)g2.drawRect(644, 155, 800-644, 392-155);
+       if(state.players[state.playing].getBoard().getBoard()[1][1]!=null)g2.drawRect(644, 403, 800-644, 637-403);
+       if(state.players[state.playing].getBoard().getBoard()[2][1]!=null)g2.drawRect(644,650,800-644,866-650);
+       
+       if(state.players[state.playing].getBoard().getBoard()[0][2]!=null)g2.drawRect(815, 155, 969-815, 392-155);
+       if(state.players[state.playing].getBoard().getBoard()[1][2]!=null)g2.drawRect(815, 403, 969-815, 637-403);
+       if(state.players[state.playing].getBoard().getBoard()[2][2]!=null)g2.drawRect(815,650,969-815,866-650);
 
-                    if(state.players[state.playing].getBoard().getBoard()[0][2]!=null)g2.drawRect(815, 155, 969-815, 392-155);
-                    if(state.players[state.playing].getBoard().getBoard()[1][2]!=null)g2.drawRect(815, 403, 969-815, 637-403);
-                    if(state.players[state.playing].getBoard().getBoard()[2][2]!=null)g2.drawRect(815,650,969-815,866-650);
+       if(state.players[state.playing].getBoard().getBoard()[0][3]!=null) g2.drawRect(985, 155, 1138-985, 392-155);
+       if(state.players[state.playing].getBoard().getBoard()[1][3]!=null) g2.drawRect(985, 403, 1138-985, 637-403);
+       if(state.players[state.playing].getBoard().getBoard()[2][3]!=null) g2.drawRect(985,650,1138-985,866-650);
 
-                    if(state.players[state.playing].getBoard().getBoard()[0][3]!=null) g2.drawRect(985, 155, 1138-985, 392-155);
-                    if(state.players[state.playing].getBoard().getBoard()[1][3]!=null) g2.drawRect(985, 403, 1138-985, 637-403);
-                    if(state.players[state.playing].getBoard().getBoard()[2][3]!=null) g2.drawRect(985,650,1138-985,866-650);
-
-                    if(state.players[state.playing].getBoard().getBoard()[0][4]!=null) g2.drawRect(1152, 155, 1302-1152, 392-155);
-                    if(state.players[state.playing].getBoard().getBoard()[1][4]!=null) g2.drawRect(1152, 403, 1302-1152, 637-403);
-                    if(state.players[state.playing].getBoard().getBoard()[2][4]!=null) g2.drawRect(1152,650,1302-1152,866-650);
-                    g2.setColor(Color.BLACK);
+      if(state.players[state.playing].getBoard().getBoard()[0][4]!=null) g2.drawRect(1152, 155, 1302-1152, 392-155);
+      if(state.players[state.playing].getBoard().getBoard()[1][4]!=null) g2.drawRect(1152, 403, 1302-1152, 637-403);
+      if(state.players[state.playing].getBoard().getBoard()[2][4]!=null) g2.drawRect(1152,650,1302-1152,866-650);
+      g2.setColor(Color.BLACK);
                     g.setFont(new Font("Arial", Font.BOLD, 55));
                     g.drawString("Click a bird to add an egg", 300, 100);
                     int count = 0;
@@ -1660,24 +1629,24 @@ repaint();
                     g.drawString("Click eggs to spend. Eggs needed: "+state.eggsNeededToSpendForPlayingBird, 300, 100);
                    
                     
-                }
-             }
-        }     
-    }    
+            }
+        }
+            }
+        }
+    
+
     public void paintOAAbility(Graphics g){
         String ability = currentBird.getAbilityText();
         if (currentBirdNum<0){
             paintGame(g);
             g.setFont(new Font("Arial", Font.BOLD, 55));
-            g.drawString("CLICK to continue", 200, 200);
+            g.drawString("clic to continue", 200, 200);
             return;
         }
         else if (ability.contains("Gain 1 [seed] from the birdfeeder")){
-            g.drawImage(bg, 0,0, getWidth(), getHeight(), null);
             if (selectingBool) paintBoolean(g, "Cache seed?", "Yes", "No");
         }
         else if (ability.contains("or [fruit] from the birdfeeder, if available")){
-            g.drawImage(bg, 0,0, getWidth(), getHeight(), null);
             if (selectingBool) paintBoolean(g, "Gain which one?", "Berry", "Insect");
         }
         else if (ability.contains("Tuck 1 [card]")){
@@ -1710,7 +1679,6 @@ repaint();
         else if (ability.contains("Discard 1 [egg] from any")){
             if (selectingFood){
                 g.drawImage(bg, 0,0, getWidth(), getHeight(), null);
-                g.setFont(new Font("Arial", Font.BOLD, 55));
                 g.drawString("Click a food to take", 400, 200);
                 g.drawImage(wheatToken, 250, 550, 100, 100, null);
                 g.drawImage(fishToken, 350, 550, 100, 100, null);
@@ -1722,17 +1690,139 @@ repaint();
         else paintGame(g);
         g.setColor(Color.CYAN);
         g.fillRect(630, 10, 300, (int)(200*1.4)+40);
-        g.drawImage(state.players[state.playing].getBirdsInHabitat(runningHabitat).get(currentBirdNum).getImage(), 650, 30, 260, (int)(200*1.4), null);
-        g.drawImage(skip, 1260, 16, 220, 105, null);
+        g.drawImage(currentBird.getImage(), 650, 30, 260, (int)(200*1.4), null);
+        g.drawImage(skip, 1100, 300, 300, 100, null);
+    }
+
+
+    public void paintOBTAbility(Graphics g){
+        if (currentPinkBird == null && !pinkPowerQueue.isEmpty()) {
+            currentPinkBird = pinkPowerQueue.peek();
+            currentPinkOwner = pinkPowerOwnerQueue.peek();
+        }
+        
+        if (currentPinkBird == null) {
+            paintGame(g);
+            return;
+        }
+
+        paintGame(g);
+        
+        g.setColor(new Color(0, 0, 0, 150));
+        g.fillRect(0, 0, getWidth(), getHeight());
+        
+        g.setColor(Color.PINK);
+        g.fillRect(580, 180, 300, 440);
+        g.drawImage(currentPinkBird.getImage(), 600, 200, 260, 364, null);
+        
+        g.setColor(Color.WHITE);
+        g.setFont(new Font("Arial", Font.BOLD, 30));
+        String ownerName = state.players[currentPinkOwner].getName();
+        g.drawString("Pink Power Triggered for " + ownerName , 500, 100);
+        
+        String ability = currentPinkBird.getAbilityText();
+        g.setFont(new Font("Arial", Font.PLAIN, 20));
+        
+        
+        g.drawImage(skip, 1100, 300, 300, 100, null);
+        
+        if (ability.contains("gain 1 [die] from the birdfeeder")) {
+             paintViewFeeder(g); 
+        }
+    }
+
+    
+
+    
+
+    
+
+    public void checkPinkPowers(String actionType, Object... params) {
+        // only check for players other than current player
+        for (int i = 0; i < state.players.length; i++) {
+            if (i == state.playing) continue;
+            
+            Player other = state.players[i];
+            for (Bird b : other.getAllBirdsOnBoard()) {
+                if (!b.isPinkPowerUsed() && b.getAbility().getTrigger().equals("OBT")) {
+                    String abilityText = b.getAbilityText();
+                    boolean triggers = false;
+                    
+                    if (actionType.equals("Lay Eggs") && abilityText.contains("lay eggs")) {
+                        triggers = true;
+                    } else if (actionType.equals("Play Bird")) {
+                        String habitat = (String) params[0];
+                        if (abilityText.contains("plays a bird in their [" + habitat + "]")) {
+                            triggers = true;
+                        }
+                    } else if (actionType.equals("Gain Food")) {
+                         if (abilityText.contains("gain food") && abilityText.contains("[rodent]")) {
+                             // Loggerhead Shrike
+                             if (params.length > 0 && params[0] instanceof String && ((String)params[0]).equals("r")) {
+                                 triggers = true;
+                             }
+                         }
+                    } else if (actionType.equals("Predator Success")) {
+                        if (abilityText.contains("[predator] succeeds")) {
+                            triggers = true;
+                        }
+                    }
+                    
+                    if (triggers) {
+                        pinkPowerQueue.add(b);
+                        pinkPowerOwnerQueue.add(i);
+                        b.setPinkPowerUsed(true); 
+                    }
+                }
+            }
+        }
+        
+        if (!pinkPowerQueue.isEmpty()) {
+            state.CURRENTEVENT.add("Once Between Turns Ability");
+        }
+    }
+
+    public void paintOBTAbility(Graphics g){
+        if (currentPinkBird == null && !pinkPowerQueue.isEmpty()) {
+            currentPinkBird = pinkPowerQueue.peek();
+            currentPinkOwner = pinkPowerOwnerQueue.peek();
+        }
+        
+        if (currentPinkBird == null) {
+            paintGame(g);
+            return;
+        }
+
+        paintGame(g);
+        
+        g.setColor(new Color(0, 0, 0, 150));
+        g.fillRect(0, 0, getWidth(), getHeight());
+        
+        g.setColor(Color.PINK);
+        g.fillRect(580, 180, 300, 440);
+        g.drawImage(currentPinkBird.getImage(), 600, 200, 260, 364, null);
+        
+        g.setColor(Color.WHITE);
+        g.setFont(new Font("Arial", Font.BOLD, 30));
+        String ownerName = state.players[currentPinkOwner].getName();
+        g.drawString("Pink Power Triggered for " + ownerName , 500, 100);
+        
+        String ability = currentPinkBird.getAbilityText();
+        g.setFont(new Font("Arial", Font.PLAIN, 20));
+        
+        
+        g.drawImage(skip, 1100, 300, 300, 100, null);
+        
+        if (ability.contains("gain 1 [die] from the birdfeeder")) {
+             paintViewFeeder(g); 
+        }
     }
 
     public void paintScoreRound(Graphics g){
-        // improved, grid-based score sheet
         g.drawImage(bg, 0, 0, getWidth(), getHeight(), null);
         Graphics2D g2 = (Graphics2D) g;
         g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
 
-        // Layout params
         int cols = state.players.length;
         int leftPad = 40;
         int topPad = 110;
@@ -1917,9 +2007,9 @@ repaint();
         if(state.squaresClickedToPlayBird[0][4]) g2.drawRect(1152, 155, 1302-1152, 392-155);
         if(state.squaresClickedToPlayBird[1][4]) g2.drawRect(1152, 403, 1302-1152, 637-403);
         if(state.squaresClickedToPlayBird[2][4]) g2.drawRect(1152,650,1302-1152,866-650);
-        //if (state.CURRENTEVENT.indexOf("Choose Bird")<0)state.CURRENTEVENT.add("Choose Bird");
+        if (state.CURRENTEVENT.indexOf("Choose Bird")<0)state.CURRENTEVENT.add("Choose Bird");
         g.setColor(new Color(0, 0, 0));
-        g.drawImage(bg, 0, 380, getWidth(), getHeight(), null);
+        g.drawImage(bg, 0, 380, this.getWidth(), this.getHeight(), null);
         g.drawImage(exitPic, 20, 400, 50, 50, null);
         g.setFont(new Font("Arial", Font.BOLD, 50));
         g.drawString("Bird Card", 600, 458);
@@ -2523,14 +2613,10 @@ repaint();
     //read in birdinfo
     public void readCSV(File f){
         for (String b: bonuses) bonusMap.put(b, new ArrayList<String>());
-        String[] sb = {"American Bittern", "Hermit Thrush", "Common Loon", "Gray Catbird", "Northern Mockingbird"}; //add any skipped
-        ArrayList<String> skippedBirds = new ArrayList<String>();
-        String focusBird = "nope"; //bird that you want to test
-        for (String s: sb) skippedBirds.add(s);
         try (Scanner scan = new Scanner(f)) {
             Bird b;
             String[] items;
-            int readAmt = 170;
+            int readAmt = 100;
             while (scan.hasNextLine() && readAmt>0){
                 String l = scan.nextLine();
                 //out.println("line: " + l);
@@ -2617,15 +2703,8 @@ repaint();
 
                 //out.println("Got to birdmaking stuff");
                 
-                if (skippedBirds.indexOf(items[0])<0){
-                    b = Bird.create(items[0], abilityActivate, items[2], abilityType, Integer.parseInt(items[6]), items[7], Integer.parseInt(items[8]), Integer.parseInt(items[9]), habitats, foodArr);
-                
-                    birds.add(b);
-                    if (items[0].equals(focusBird)){
-                        for (int i=0;i<150;i++) birds.add(b);
-                    }
-                }
-                
+                b = Bird.create(items[0], abilityActivate, items[2], abilityType, Integer.parseInt(items[6]), items[7], Integer.parseInt(items[8]), Integer.parseInt(items[9]), habitats, foodArr);
+                birds.add(b);
                 //out.println("Finished birdmaking stuff");
 
                 int i=22;
@@ -2665,9 +2744,6 @@ repaint();
         }catch(Exception e){
             out.println("Exception: "+e);
             out.println("Images couldn't be loaded.");
-        }
-        for (Bird b: birds){
-            //out.println(b.getName());
         }
     }
     
@@ -2759,7 +2835,6 @@ repaint();
     }
 
     public void endTurn(ProgramState.PlayerAction action) {
-        //Todo: state needs a game portion
         state.game.next(action);
     }
 
@@ -2820,4 +2895,4 @@ repaint();
 
 
 
-
+     
